export const snapshot = {};

snapshot[`terser plugin 1`] = `2`;

snapshot[`terser plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      pageLoader: [AsyncFunction: text],
    },
    {
      asset: true,
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`terser plugin 3`] = `
[
]
`;

snapshot[`terser plugin 4`] = `
{
  content: 'import{one as o,two as m}from"./numbers.js";console.log(o()+m());',
  data: {
    content: 'import { one, two } from "./numbers.js";

console.log(one() + two());
',
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/main.js",
  },
  dest: {
    ext: ".js",
    path: "/main",
  },
  src: {
    asset: true,
    ext: ".js",
    path: "/main",
    remote: undefined,
    slug: "main",
  },
}
`;

snapshot[`terser plugin 5`] = `
{
  content: "export function one(){return 1}export function two(){return 2}",
  data: {
    children: "export function one () {
  return 1;
}

export function two () {
  return 2;
}
/*
Commented code
export function two () {
  return 2;
}
*/",
    content: "export function one () {
  return {{ one }};
}

export function two () {
  return {{ two }};
}
/*
Commented code
export function two () {
  return {{ two }};
}
*/",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    one: 1,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    two: 2,
    url: "/numbers.js",
  },
  dest: {
    ext: ".js",
    path: "/numbers",
  },
  src: {
    asset: undefined,
    ext: ".njk",
    path: "/numbers.js",
    remote: undefined,
    slug: "numbers",
  },
}
`;
